# singlefile

./: README.md  another.txt  package.json  pyproject.toml  random.txt
